--- a/Portals/0/rich-content/mixa/3600551137063.html
+++ b/Portals/0/rich-content/mixa/3600551137063.html
@@ -3,7 +3,10 @@
   href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;900&display=swap"
   rel="stylesheet"
 />
-<link rel="stylesheet" href="https://www.ros.net.pl/Portals/0/rich-content/mixa/urea-cica/css/style.css" />
+<link
+  rel="stylesheet"
+  href="https://www.ros.net.pl/Portals/0/rich-content/mixa/urea-cica/css/style.css"
+/>
 <div class="es-mixa" id="es-mixa">
   <section class="es-kv">
     <img
@@ -17,7 +20,11 @@
       class="es-kv__bg-mobile"
     />
     <div class="es-kv__content">
-      <img src="https://www.ros.net.pl/Portals/0/rich-content/mixa/urea-cica/img/logo.png" alt="" class="es-kv__logo" />
+      <img
+        src="https://www.ros.net.pl/Portals/0/rich-content/mixa/urea-cica/img/logo.png"
+        alt=""
+        class="es-kv__logo"
+      />
       <p class="es-kv__title">MULTIFUNKCYJNY <br />KREM REGENERUJĄCY</p>
       <p class="es-kv__name">UREA CICA REPAIR+</p>
       <p class="es-kv__subtitle">Dla skóry suchej i szorstkiej</p>
@@ -42,8 +49,9 @@
             <p class="es-kv__image-desc">po 8H</p>
           </div>
           <p class="es-kv__desc">
-            Średni efekt nawilżenia skóry po 8 godzinach od jednorazowego zastosowania w normalnych warunkach. Efekt
-            może się różnić w zależności od osoby.
+            Średni efekt nawilżenia skóry po 8 godzinach od jednorazowego
+            zastosowania w normalnych warunkach. Efekt może się różnić w
+            zależności od osoby.
           </p>
         </div>
       </div>
@@ -51,7 +59,8 @@
   </section>
   <section class="es-baner">
     <p class="es-baner__text">
-      HIPOALERGICZNA FORMUŁA - TESTOWANY POD KONTROLĄ MEDYCZNĄ - SKUTECZNOŚĆ POTWIERDZONA BADANIAMI
+      HIPOALERGICZNA FORMUŁA - TESTOWANY POD KONTROLĄ MEDYCZNĄ - SKUTECZNOŚĆ
+      POTWIERDZONA BADANIAMI
     </p>
   </section>
   <section class="es-icons">
@@ -103,20 +112,28 @@
     />
     <div class="es-percents">
       <div class="es-percents__subtitles">
-        <div class="es-percents__subtitle es-percents__subtitle--left">po pierwszej<br />aplikacji:</div>
-        <div class="es-percents__subtitle es-percents__subtitle--right">po 1 tygodniu<br />stosowania*:</div>
+        <div class="es-percents__subtitle es-percents__subtitle--left">
+          po pierwszej<br />aplikacji:
+        </div>
+        <div class="es-percents__subtitle es-percents__subtitle--right">
+          po 1 tygodniu<br />stosowania*:
+        </div>
       </div>
 
       <div class="es-percents__row">
         <div class="es-percents__item">
           <p class="es-percents__number"></p>
           <p class="es-percents__text es-percents__text--red"></p>
-          <p class="es-percents__text es-percents__text--big">Widocznie redukuje szorstkość i łuszczenie się skóry*</p>
+          <p class="es-percents__text es-percents__text--big">
+            Widocznie redukuje szorstkość i łuszczenie się skóry*
+          </p>
         </div>
         <div class="es-percents__item">
           <p class="es-percents__number">95%</p>
           <p class="es-percents__text es-percents__text--red">potwierdza,</p>
-          <p class="es-percents__text">Że suche obszary wyglądają na mniej szorstkie*</p>
+          <p class="es-percents__text">
+            Że suche obszary wyglądają na mniej szorstkie*
+          </p>
         </div>
       </div>
     </div>
@@ -135,9 +152,13 @@
       <div class="es-ingr__item es-ingr__item--1">
         <p class="es-ingr__itemTitle">KOJĄCY NIACYNAMID</p>
         <ul class="es-ingr__list">
-          <li class="es-ingr__listItem">Rozświetla i wyrównuje koloryt skóry</li>
+          <li class="es-ingr__listItem">
+            Rozświetla i wyrównuje koloryt skóry
+          </li>
           <li class="es-ingr__listItem">Nawilża skórę</li>
-          <li class="es-ingr__listItem">Działa antybakteryjnie, przeciwzapalnie i antyoksydacyjnie</li>
+          <li class="es-ingr__listItem">
+            Działa antybakteryjnie, przeciwzapalnie i antyoksydacyjnie
+          </li>
         </ul>
         <img
           src="https://www.ros.net.pl/Portals/0/rich-content/mixa/urea-cica/img/line.png"
@@ -187,16 +208,24 @@
         <tbody>
           <tr class="es-routine__tr">
             <td class="">&nbsp;</td>
-            <td class="es-routine__td es-routine__td--name es-routine__td--name--1">Multifunkcyjny krem</td>
+            <td
+              class="es-routine__td es-routine__td--name es-routine__td--name--1"
+            >
+              Multifunkcyjny krem
+            </td>
             <td class="es-routine__td es-routine__td--name">Balsam do ciała</td>
           </tr>
           <tr class="es-routine__tr">
-            <td class="es-routine__td es-routine__td--firstColumn">Przeznaczenie</td>
+            <td class="es-routine__td es-routine__td--firstColumn">
+              Przeznaczenie
+            </td>
             <td class="es-routine__td">Twarz, ciało, dłonie</td>
             <td class="es-routine__td">Ciało</td>
           </tr>
           <tr class="es-routine__tr">
-            <td class="es-routine__td es-routine__td--firstColumn">Składniki</td>
+            <td class="es-routine__td es-routine__td--firstColumn">
+              Składniki
+            </td>
             <td class="es-routine__td">10% [Mocznik + Niacynamid]</td>
             <td class="es-routine__td">5% [Mocznik + Pantenol]</td>
           </tr>
@@ -206,7 +235,9 @@
             <td class="es-routine__td">Balsam</td>
           </tr>
           <tr class="es-routine__tr">
-            <td class="es-routine__td es-routine__td--firstColumn">Dla kogo?</td>
+            <td class="es-routine__td es-routine__td--firstColumn">
+              Dla kogo?
+            </td>
             <td class="es-routine__td">Dorośli</td>
             <td class="es-routine__td">Dorośli</td>
           </tr>
@@ -216,10 +247,14 @@
   </section>
 
   <section class="es-cross">
-    <p class="es-cross__title">Wybierz idealny produkt dla swojej wrażliwej skóry</p>
+    <p class="es-cross__title">
+      Wybierz idealny produkt dla swojej wrażliwej skóry
+    </p>
     <div class="es-cross__container">
       <div class="es-cross__product">
-        <a href="#">
+        <a
+          href="https://www.rossmann.pl/Produkt/Kremy-i-masla-do-ciala/Mixa-Ceramide-Protect-krem-multifunkcyjny-nawilzajacy-ochronny-400-ml,2011070,13096"
+        >
           <img
             src="https://www.ros.net.pl/Portals/0/rich-content/mixa/urea-cica/img/cross-1.png"
             alt=""
@@ -228,7 +263,12 @@
         </a>
         <p class="es-cross__desc es-cross__desc--1">Ceramide Protect</p>
         <p class="es-cross__text">Dla skóry bardzo suchej</p>
-        <a href="#" class="es-cross__link es-cross__link--1" target="_blank">Dodaj do koszyka</a>
+        <a
+          href="https://www.rossmann.pl/Produkt/Kremy-i-masla-do-ciala/Mixa-Ceramide-Protect-krem-multifunkcyjny-nawilzajacy-ochronny-400-ml,2011070,13096"
+          class="es-cross__link es-cross__link--1"
+          target="_blank"
+          >Dodaj do koszyka</a
+        >
       </div>
       <div class="es-cross__product">
         <a href="#">
@@ -240,10 +280,14 @@
         </a>
         <p class="es-cross__desc es-cross__desc--2">Panthenol Comfort</p>
         <p class="es-cross__text">Dla skóry atopowej</p>
-        <a href="#" class="es-cross__link es-cross__link--2" target="_blank">Dodaj do koszyka</a>
+        <a href="#" class="es-cross__link es-cross__link--2" target="_blank"
+          >Dodaj do koszyka</a
+        >
       </div>
       <div class="es-cross__product">
-        <a href="#">
+        <a
+          href="https://www.rossmann.pl/Produkt/Kremy-i-masla-do-ciala/Mixa-Urea-Cica-Repair-krem-multifunkcyjny-regenerujacy-400-ml,2011071,13096"
+        >
           <img
             src="https://www.ros.net.pl/Portals/0/rich-content/mixa/urea-cica/img/cross-3.png"
             alt=""
@@ -252,7 +296,12 @@
         </a>
         <p class="es-cross__desc es-cross__desc--3">Urea Cica Repair+</p>
         <p class="es-cross__text">Dla skóry suchej i szorstkiej</p>
-        <a href="#" class="es-cross__link es-cross__link--3" target="_blank">Dodaj do koszyka</a>
+        <a
+          href="https://www.rossmann.pl/Produkt/Kremy-i-masla-do-ciala/Mixa-Urea-Cica-Repair-krem-multifunkcyjny-regenerujacy-400-ml,2011071,13096"
+          class="es-cross__link es-cross__link--3"
+          target="_blank"
+          >Dodaj do koszyka</a
+        >
       </div>
     </div>
     <p class="es-cross__footer">*Test konsumencki, 55 osób.</p>
